Module 4 class additions

--- a/Module_3_Loops.ipynb
+++ b/Module_3_Loops.ipynb
@@ -32,11 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "orange\n",
+      "grape\n",
+      "banana\n"
+     ]
+    }
+   ],
    "source": [
     "#Define our favorite list\n",
     "fruits = ['apple', 'orange', 'grape', 'banana']\n",
@@ -48,11 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I like to eat apples!!\n",
+      "I like to eat oranges!!\n",
+      "I like to eat grapes!!\n",
+      "I like to eat bananas!!\n"
+     ]
+    }
+   ],
    "source": [
     "#We can also perform actions on each item in each iterations.\n",
     "#For example, let's make them plural and then tell everyone how much we like them.\n",
@@ -66,11 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apples', 'oranges', 'grapes', 'bananas']\n"
+     ]
+    }
+   ],
    "source": [
     "#Add each modified item to a new list\n",
     "fruits = ['apple', 'orange', 'grape', 'banana']\n",
@@ -123,11 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "a = 2\n",
     "b = 3\n",
@@ -138,11 +169,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love apples!!\n",
+      "I love oranges!!\n",
+      "I love grapes!!\n",
+      "I hate bananas!!\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = ['apples', 'oranges', 'grapes', 'bananas']\n",
     "\n",
@@ -163,11 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love apples!!\n",
+      "I love oranges!!\n",
+      "I love grapes!!\n",
+      "I hate bananas!!\n",
+      "Hey, bozo, zucchinis are not fruits.\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = ['apples', 'oranges', 'grapes', 'bananas', 'zucchinis']\n",
     "\n",
@@ -186,26 +236,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love apples!!\n",
+      "I love oranges!!\n",
+      "I love grapes!!\n",
+      "I hate bananas!!\n",
+      "Hey, bozo, zucchinis are not fruits.\n"
+     ]
+    }
+   ],
    "source": [
     "#Same question but organized in a slightly different way\n",
     "\n",
     "deliciousfruits = ['apples', 'oranges', 'grapes']\n",
     "disgustingfruits = ['bananas']\n",
+    "peanutbutterpresent = False\n",
     "\n",
-    "fruits = ['apples', 'oranges', 'grapes', 'bananas', 'zucchinis']\n",
+    "fruits = ['apples', 'oranges', 'grapes', 'bananas', 'zucchinis', 45]\n",
     "\n",
     "for fruit in fruits:\n",
-    "    if fruit in deliciousfruits:\n",
-    "        print('I love ' + fruit + '!!')\n",
-    "    elif fruit in disgustingfruits:\n",
-    "        print('I hate ' + fruit + '!!')\n",
-    "    else:\n",
-    "        print('Hey, bozo, ' + fruit + ' are not fruits.')"
+    "    if type(fruit) == str:\n",
+    "        if fruit in deliciousfruits:\n",
+    "            print('I love ' + fruit + '!!')\n",
+    "        elif fruit in disgustingfruits and not peanutbutterpresent:\n",
+    "            print('I hate ' + fruit + '!!')\n",
+    "        elif fruit in disgustingfruits and peanutbutterpresent:\n",
+    "            print('OK, I\\ll have bananas this one time.')\n",
+    "        else:\n",
+    "            print('Hey, bozo, ' + fruit + ' are not fruits.')"
    ]
   },
   {
@@ -219,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +413,7 @@
     "Loops can also be nested, allowing simulatneous actions on multiple iterables.  For example:\n",
     "\n",
     "    for item in iterable1:\n",
-    "        for item in iterable2:\n",
+    "        for item2 in iterable2:\n",
     "            do something\n",
     "            \n",
     "Here, we will start with the first item in iterable1. Then, for every item in iterable2, we will do something.  Then we will move to the second item in iterable1.  Then, for every item in iterable2, we will do something.  And so on.\n",
@@ -359,11 +423,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love big apples!!\n",
+      "I love juicy apples!!\n",
+      "I love delicious apples!!\n",
+      "I love big oranges!!\n",
+      "I love juicy oranges!!\n",
+      "I love delicious oranges!!\n",
+      "I love big grapes!!\n",
+      "I love juicy grapes!!\n",
+      "I love delicious grapes!!\n",
+      "I love big bananas!!\n",
+      "I love juicy bananas!!\n",
+      "I love delicious bananas!!\n"
+     ]
+    }
+   ],
    "source": [
     "adjectives = ['big', 'juicy', 'delicious']\n",
     "fruits = ['apples', 'oranges', 'grapes', 'bananas']\n",
@@ -383,17 +464,23 @@
     "Python has the loop control statements <font color = 'red'>continue</font>, <font color = 'red'>break</font>, and <font color = 'red'>pass</font>.\n",
     "\n",
     "- **continue** statements tell Python to proceed with the next iteration of the loop\n",
-    "- **break** statements stop iteration of the loop\n",
+    "- **break** statements stop iteration of the loop and exit the loop\n",
     "- **pass** statements are placeholders and don't cause anything to happen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love grapes!!\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = ['apples', 'oranges', 'grapes', 'bananas']\n",
     "\n",
@@ -407,11 +494,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apples\n",
+      "oranges\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = ['apples', 'oranges', 'grapes', 'bananas']\n",
     "\n",
@@ -438,17 +532,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i is equal to 1\n",
+      "i is equal to 2\n",
+      "i is equal to 3\n",
+      "i is equal to 4\n",
+      "i is equal to 5\n",
+      "i is equal to 6\n",
+      "i is equal to 7\n",
+      "i is equal to 8\n",
+      "i is equal to 9\n",
+      "i is equal to 10\n",
+      "Whoops! i is no longer less than 10.\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "\n",
     "while i < 10: #run this loop until i is greater than or equal to 10\n",
-    "    print('i is equal to ' + str(i)) #i must be formatted to str.  You cannot add strings and integers together.\n",
     "    i += 1 #add 1 to i, move on to the next iteration of the loop.\n",
+    "    print('i is equal to ' + str(i)) #i must be formatted to str.  You cannot add strings and integers together.\n",
     "    \n",
     "#The condition is no longer satisfied, so we move on past the loop.\n",
     "print('Whoops! i is no longer less than 10.')"
@@ -464,9 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#PRESS INTERRUPT KERNEL AFTER RUNNING THIS BLOCK (IT'S THE ONE THAT LOOKS LIKE A SQUARE.)\n",
@@ -492,11 +600,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apples', 'oranges', 'grapes', 'bananas']\n",
+      "['apples', 'oranges', 'grapes', 'bananas']\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = ['apple', 'orange', 'grape', 'banana']\n",
     "\n",
@@ -518,11 +633,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bananas']\n",
+      "['bananas']\n"
+     ]
+    }
+   ],
    "source": [
     "#Let's do another one!  This time with a conditional statement!\n",
     "fruits = ['apple', 'orange', 'grape', 'banana']\n",
@@ -545,15 +667,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'orange', 'grape', 'bananas']\n",
+      "['apple', 'apple', 'apple', 'orange', 'orange', 'orange', 'grape', 'grape', 'grape', 'bananasbig', 'bananasjuicy', 'bananasdelicious']\n"
+     ]
+    }
+   ],
    "source": [
     "#One more time, this time with and if statement and an else statement\n",
     "\n",
     "fruits = ['apple', 'orange', 'grape', 'banana']\n",
+    "adj = ['big', 'juicy', 'delicious']\n",
     "\n",
     "#Only make the fruit plural if it starts with 'b', otherwise keep them in their singular form\n",
     "pluralfruits = []\n",
@@ -568,7 +698,7 @@
     "print(pluralfruits)\n",
     "\n",
     "#With a list comprehension.\n",
-    "pluralfruits_lc = [fruit + 's' if fruit.startswith('b') else fruit for fruit in fruits]\n",
+    "pluralfruits_lc = [fruit + 's' + a if fruit.startswith('b') else fruit for fruit in fruits for a in adj]\n",
     "\n",
     "print(pluralfruits_lc)"
    ]
