--- a/Module_4_Functions.ipynb
+++ b/Module_4_Functions.ipynb
@@ -48,11 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n"
+     ]
+    }
+   ],
    "source": [
     "#Our first function\n",
     "\n",
@@ -75,19 +81,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Well hello, Scooby. It is Wednesday\n",
+      "Well hello, Shaggy. It is Wednesday\n"
+     ]
+    }
+   ],
    "source": [
     "#Slightly more complicated\n",
     "\n",
-    "def greeter(name):\n",
-    "    print('Well hello, {0}.'.format(name))\n",
+    "def greeter(names, day):\n",
+    "    for dog in names:\n",
+    "        print('Well hello, {0}. It is {1}'.format(dog, day))\n",
+    "    #print('Well hello, {0}.\\nIt is {1}.'.format(name, day))\n",
+    "    #print('Well hello, ' + name + '.\\nIt is ' + str(day) + '.')\n",
     "    \n",
     "#Function is defined.  Let's call it. Remember, this function requires one argument.  It must be provided.\n",
-    "greeter('Srinivas')"
+    "\n",
+    "names = ['Scooby', 'Shaggy']\n",
+    "greeter(names, 'Wednesday')\n",
+    "\n",
+    "#variable = 'myvariable'\n",
+    "#variable2 = 'mysecondvariable'\n",
+    "#formattedstring = 'mystring{0}{1}'.format(variable, variable2)\n",
+    "#print(formattedstring)"
    ]
   },
   {
@@ -101,16 +124,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n",
+      "53\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "#A function to add two numeric quantities\n",
-    "\n",
+    "numbers = [1, 2,3, 2, 9, 2, 24, 10]\n",
     "def plus(a, b):\n",
     "    return a + b\n",
+    "\n",
+    "def sumoflist(mylist):\n",
+    "    return sum(mylist)\n",
+    "\n",
+    "print(sum(numbers))\n",
+    "print(sumoflist(numbers))\n",
     "\n",
     "#Simple enough, now call it\n",
     "mysum = plus(2, 3)\n",
@@ -119,11 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "Both a and b must be numeric!\n"
+     ]
+    }
+   ],
    "source": [
     "#Often it's good to write code that will catch your errors\n",
     "\n",
@@ -159,11 +203,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "Both a and b must be numeric!\n"
+     ]
+    }
+   ],
    "source": [
     "def plus(a, b):\n",
     "    '''\n",
@@ -202,11 +253,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n",
+      "10\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-57ad3b3c76af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;31m#Can we access the variable x that is inside the function?  No.  We are outside of the function now.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
    "source": [
     "initialx = 5\n",
     "\n",
@@ -247,11 +317,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'UUU': 'F', 'UUC': 'F', 'UUA': 'L', 'UUG': 'L', 'UCU': 'S', 'UCC': 'S', 'UCA': 'S', 'UCG': 'S', 'UAU': 'Y', 'UAC': 'Y', 'UAA': '*', 'UAG': '*', 'UGU': 'C', 'UGC': 'C', 'UGA': '*', 'UGG': 'W', 'CUU': 'L', 'CUC': 'L', 'CUA': 'L', 'CUG': 'L', 'CCU': 'P', 'CCC': 'P', 'CCA': 'P', 'CCG': 'P', 'CAU': 'H', 'CAC': 'H', 'CAA': 'Q', 'CAG': 'Q', 'CGU': 'R', 'CGC': 'R', 'CGA': 'R', 'CGG': 'R', 'AUU': 'I', 'AUC': 'I', 'AUA': 'I', 'AUG': 'M', 'ACU': 'T', 'ACC': 'T', 'ACA': 'T', 'ACG': 'T', 'AAU': 'N', 'AAC': 'N', 'AAA': 'K', 'AAG': 'K', 'AGU': 'S', 'AGC': 'S', 'AGA': 'R', 'AGG': 'R', 'GUU': 'V', 'GUC': 'V', 'GUA': 'V', 'GUG': 'V', 'GCU': 'A', 'GCC': 'A', 'GCA': 'A', 'GCG': 'A', 'GAU': 'D', 'GAC': 'D', 'GAA': 'E', 'GAG': 'E', 'GGU': 'G', 'GGC': 'G', 'GGA': 'G', 'GGG': 'G'}\n",
+      "{'X': 'A', 'Y': 'B', 'Z': 'C', 'A': 'D'}\n"
+     ]
+    }
+   ],
    "source": [
     "codons = ['UUU', 'UUC', 'UUA', 'UUG', 'UCU', 'UCC', 'UCA', 'UCG', 'UAU', 'UAC', 'UAA', 'UAG', 'UGU', 'UGC', 'UGA', 'UGG', \n",
     "          'CUU', 'CUC', 'CUA', 'CUG', 'CCU', 'CCC', 'CCA', 'CCG', 'CAU', 'CAC', 'CAA', 'CAG', 'CGU', 'CGC', 'CGA', 'CGG', \n",
@@ -268,7 +345,16 @@
     "#Let's turn it into a dictionary\n",
     "codontable = dict(codontable)\n",
     "\n",
-    "print(codontable)"
+    "print(codontable)\n",
+    "\n",
+    "iterable1 = ['A', 'B', 'C', 'D', 'E']\n",
+    "iterable2 = 'XYZA'\n",
+    "\n",
+    "print(dict(zip(iterable2, iterable1)))\n",
+    "\n",
+    "a = zip(iterable1, iterable2)\n",
+    "b = dict(a)\n",
+    "print(b)"
    ]
   },
   {
@@ -282,11 +368,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 8, 21]\n",
+      "[12, 8, 21]\n"
+     ]
+    }
+   ],
    "source": [
     "#Get the lengths of each of these oligos in this list\n",
     "\n",
@@ -330,11 +423,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "330\n",
+      "294\n"
+     ]
+    }
+   ],
    "source": [
     "#How many ways can you arrange people at a dinner party (perhaps a...final...dinner) into tables?\n",
     "\n",
@@ -349,10 +449,18 @@
     "tables = comb(guests, 4)\n",
     "#tables is now a \"combinations object\" but we can turn it into a list\n",
     "tables = list(tables)\n",
-    "print(tables)\n",
+    "nonconfusingtables = []\n",
+    "for table in tables:\n",
+    "    if 'James' in table and 'OtherJames' in table:\n",
+    "        continue\n",
+    "    else:\n",
+    "        nonconfusingtables.append(table)\n",
+    "        \n",
+    "#print(tables)\n",
     "#Each table in tables is a 'tuple'. \n",
     "#We didn't cover what these are, but they are essentially equivalent to lists but they are *immutable*.\n",
-    "print(len(tables))"
+    "print(len(tables))\n",
+    "print(len(nonconfusingtables))"
    ]
   },
   {
@@ -368,11 +476,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "720\n",
+      "180\n"
+     ]
+    }
+   ],
    "source": [
     "from itertools import permutations as perm\n",
     "\n",
@@ -381,7 +496,10 @@
     "perms = perm(seq) #this is a permutations object\n",
     "#Turn it into a list\n",
     "perms = list(perms)\n",
-    "print(perms)\n",
+    "#print(perms)\n",
+    "print(len(perms))\n",
+    "\n",
+    "perms = set(perms)\n",
     "print(len(perms))"
    ]
   },
@@ -470,7 +588,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -478,7 +596,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -492,7 +610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
