--- a/Module_5_Pandas_SciPy_NumPy.ipynb
+++ b/Module_5_Pandas_SciPy_NumPy.ipynb
@@ -7,10 +7,301 @@
     "# Lesson 5\n",
     "\n",
     "## Topics:\n",
-    " - Pandas\n",
-    " - Scipy (Sigh pie)\n",
+    "\n",
     " - Numpy\n",
-    " \n",
+    " - Pandas\n",
+    "\n",
+    "Why Numpy (and Scipy)?\n",
+    "\n",
+    "#### We are scientists doing computing. So we need 'scientific computing'! Numpy and Scipy make python the elite programming language for scientists.\n",
+    "\n",
+    "Think of Numpy and Scipy as superpowers - they enable us to do computations that are too onerous to code every time and/or out of reach of the data structures we have studied till date. We will just learn the basics today, just enough for you to explore further on your own.\n",
+    "\n",
+    "We will not cover Scipy, but I highly recommend trying on your own if your projects require high-level computing: http://scipy-lectures.org/intro/scipy.html \n",
+    "\n",
+    "### Numpy\n",
+    "\n",
+    "The basic component of numpy is the ndarray or the n dimensional array. All elements of the array are the same type and the dimensions of the array are called axes. For example, a 3D coordinate of an atom that we talked about previously: [1.123, 2.3232, 4.232] can be a numpy array with one axis.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "alist = [1,2,3,4,5,6,7,8,9]\n",
+    "#alist = [(1,2,3),(4,5,6),(7,8,9)]\n",
+    "a_ndarray = np.array(alist)\n",
+    "print(a_ndarray)\n",
+    "#ndim prints the number of dimensions of the array\n",
+    "print(\"Number of axes: \",a_ndarray.ndim)\n",
+    "#shape prints dimensions of the array\n",
+    "print(\"Dimensions of the array are:\",a_ndarray.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#reshape returns an ndarray of specified \"shape\"\n",
+    "alist = [1,2,3,4,5,6,7,8,9]\n",
+    "a_ndarray = np.array(alist)\n",
+    "a_matrix = a_ndarray.reshape(3,3)\n",
+    "print(a_matrix)\n",
+    "#What type of items are in the array?\n",
+    "print(a_matrix.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#The itemtypes are really important for ndarray - item types cannot mix unlike dictionary or list.\n",
+    "#So you can specify item type just to be careful:\n",
+    "\n",
+    "c = np.array( [ [1,2], [3,4] ], dtype=float )\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#to create a range, the function used is arange:\n",
+    "a = np.arange( 0, 21, 5 )\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from numpy import pi\n",
+    "x = np.linspace( 0, 2*pi, 100 )   # useful to evaluate function at lots of points\n",
+    "f = np.sin(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us revisit plotting : I googled, and found this page: https://matplotlib.org/gallery/lines_bars_and_markers/simple_plot.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ax.plot(x, f, color='black',label=\"sin(x)\")\n",
+    "#ax.plot(x*360/(2*pi), f, color='black',label=\"sin(x)\")\n",
+    "\n",
+    "ax.set(xlabel='Angle', ylabel='Read Density')\n",
+    "\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Operations!\n",
+    "#All operations in numpy arrays occur elementwise\n",
+    "\n",
+    "A = np.array([1,2,3,4])\n",
+    "B = np.array([5,6,7,8])\n",
+    "\n",
+    "print(A)\n",
+    "print(B)\n",
+    "\n",
+    "print(A+B)\n",
+    "print(A-B)\n",
+    "print(A*B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Operations!\n",
+    "#All operations in numpy arrays occur elementwise\n",
+    "\n",
+    "A = np.array([1,2,3,4]).reshape(2,2)\n",
+    "B = np.array([5,6,7,8]).reshape(2,2)\n",
+    "\n",
+    "print(A)\n",
+    "print(B)\n",
+    "\n",
+    "print(A+B)\n",
+    "print(A-B)\n",
+    "print(A*B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The biggest advantage of numpy arrays are matrix operations! \"@\" is used for matrix multiplication. Here is an example (multiplying a 1x4 matrix with a 4x1 matrix gives a 1,1 matrix):<br>\n",
+    "`\n",
+    "[1 2 3 4] . |1|  = [30]\n",
+    "            |2|  \n",
+    "            |3|  \n",
+    "            |4|  \n",
+    "            `\n",
+    " <br>m x n matrix can be multiplied by n x l matrix to give m x l matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "A = np.array(np.arange(1,5))\n",
+    "B = np.array(np.arange(1,5)).reshape(4,1)\n",
+    "print(A)\n",
+    "print(B)\n",
+    "print(A@B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "A = np.array(np.arange(1,11)).reshape(2,5)\n",
+    "B = np.array(np.arange(1,21)).reshape(5,4)\n",
+    "print(A)\n",
+    "#print(B)\n",
+    "C = A@B\n",
+    "print(A.shape,B.shape,C.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#To calculate inverse of a matrix\n",
+    "from numpy.linalg import inv\n",
+    "A = [[1,2],[2,1]]\n",
+    "inv_A = inv(A)\n",
+    "inv_A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Did the inverse work?\n",
+    "inv_A@A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us get back to one dimensional arrays and look at some powerful operations numpy permits. First is random number generation. (https://docs.scipy.org/doc/numpy-1.15.1/reference/routines.random.html)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a_random_array = np.random.rand(100)\n",
+    "a_random_array\n",
+    "\n",
+    "#what if I want random sampling from a Gaussian distribution?\n",
+    "\n",
+    "mean = 10 #mean of the distribution\n",
+    "sd  = 2 #standard deviation of the distribution\n",
+    "\n",
+    "a_random_array = np.random.normal(mean,sd,10000)\n",
+    "#a_random_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#did it really work?? Let us make a histogram to check\n",
+    "\n",
+    "plt.hist(a_random_array, bins=60) #plt.hist automatically makes a histogram\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### If you are nostalgic for R...\n",
     "\n",
     "You don't have to go out of jupyter!\n",
@@ -20,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -33,9 +324,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas II: Manipulating data frames\n",
-    "\n",
-    "Last time we learned about the ability of Python to store and manipulate tabular data with the Pandas package.\n",
+    "Pandas works on dataframe. Similar to ndarray in numpy, you can convert your familiar datastructures into a dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "instructor = {'name' : 'Srinivas', 'floor' : 9, 'fav_things' : ['uracil', '2primehydroxyls', 'polyAtails']}\n",
+    "pd.DataFrame(instructor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But it is really powerful when you can read data files. Let us try reading a \"csv\" file with expression values of different genes in the cell line K562:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df_k562 = pd.read_csv(\"k562.csv\",header=None)\n",
+    "df_k562.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df_k562.iloc[:,0].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Manipulating data frames\n",
     "\n",
     "Tabular data is quite common in genomic analyses.  You can imagine wanting to create and manipulate a table like the following:\n",
     "\n",
@@ -70,24 +408,6 @@
     "|GeneE |        1                  |   4                       |   2.00           | 0.15   |\n",
     "|GeneF |       1000                |   800                     |   -0.32          | 0.001  |\n",
     "\n",
-    "Remember that we can either create this dataframe using a dictionary:\n",
-    "\n",
-    "    import pandas as pd\n",
-    "\n",
-    "    d = {'Gene': ['GeneA', 'GeneB', 'GeneC', 'GeneD', 'GeneE', 'GeneF'],\n",
-    "    'cond1exp' : [100, 50, 40, 20, 1, 1000],\n",
-    "    'cond2exp' : [200, 12.5, 45, 20, 4, 800],\n",
-    "    'log2FC' : [1, -2, 0.17, 0.00, 2.00, -0.32],\n",
-    "    'pvalue' : [6e-5, 2e-6, 0.55, 1.00, 0.15, 0.001]}\n",
-    "    \n",
-    "    df = pd.DataFrame(data = d)\n",
-    "    \n",
-    "    \n",
-    "Or we that we can load the dataframe from a file using \n",
-    "\n",
-    "    pd.DataFrame.from_csv\n",
-    "    \n",
-    "    \n",
     "Let's suppose that we wanted to make a new dataframe that consisted of only some of the columns or rows of df.  In essenece, we want to select a subset of columns and rows from df.  This is done with the **.loc** and **.iloc** methods."
    ]
   },
@@ -120,7 +440,7 @@
     "\n",
     "> <font color = 'red'>Slightly confusing note 3:  </font> Pandas dataframes have things called \"indexes\" which are essentially row names.  These can be set explicitly.  However, if they are not, as in the case of df, they are simply defined as integers, beginning with 0. You can think of the indexes as just another column, but without a column name.  You can see them in the far left any time you visualize a dataframe with df.head() or any other method.\n",
     "\n",
-    ".iloc operates on integer-based indexes.  This means you can ask for the third column, but not the column named 'cond2exp'.  (Conversly, with .loc, you can ask for the \n",
+    ".iloc operates on integer-based indexes.  This means you can ask for the third column, but not the column named 'cond2exp'.  (Conversly, with .loc, you can ask for the column name)\n",
     "\n",
     "OK, now that we've got all that down, let's ask for just the first column of df."
    ]
@@ -129,7 +449,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -164,7 +484,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -189,7 +509,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -203,7 +523,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -220,7 +540,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -233,7 +553,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -245,6 +565,51 @@
     "#When slicing, the ids do not go in a list\n",
     "subsetdf = df.loc[:, 'cond1exp':'pvalue']\n",
     "print(subsetdf.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assignments\n",
+    "\n",
+    "    1. Random number generators are useful in creating dummy data to test robustness of your analysis. Generate values for corresponding to a cosine function in the interval [0,4\\*pi] and then add noise at 5% and 10% of the value of the cosine function. The output should be two ndarrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Solution code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    2. Linear equations can be solved using matrices. Write code to solve for 3 unknowns in the following equations using ndarrays.\n",
+    "`\n",
+    " w  + 2x + 4y -  z =  7\n",
+    "2w  - 2x -  y +  z =  5\n",
+    " w  +  x - 3y + 2z = 14\n",
+    "`<br><br>\n",
+    "The solution is w=1, x=2, y=3, z=10.<br>\n",
+    "Here is a link where the math is explained: https://www.mathsisfun.com/algebra/systems-linear-equations-matrices.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Solution code here"
    ]
   }
  ],
