--- a/Module_5_Pandas_SciPy_NumPy.ipynb
+++ b/Module_5_Pandas_SciPy_NumPy.ipynb
@@ -280,7 +280,7 @@
     "mean = 10 #mean of the distribution\n",
     "sd  = 2 #standard deviation of the distribution\n",
     "\n",
-    "a_random_array = np.random.normal(mean,sd,10000)\n",
+    "a_random_array = np.random.normal(mean,sd,1000)\n",
     "#a_random_array"
    ]
   },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -348,25 +348,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ENSG00000000003</td>\n",
+       "      <td>TSPAN6</td>\n",
+       "      <td>K-562</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>FPKM</td>\n",
+       "      <td>Not detected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ENSG00000000005</td>\n",
+       "      <td>TNMD</td>\n",
+       "      <td>K-562</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>FPKM</td>\n",
+       "      <td>Not detected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ENSG00000000419</td>\n",
+       "      <td>DPM1</td>\n",
+       "      <td>K-562</td>\n",
+       "      <td>78.7</td>\n",
+       "      <td>FPKM</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ENSG00000000457</td>\n",
+       "      <td>SCYL3</td>\n",
+       "      <td>K-562</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>FPKM</td>\n",
+       "      <td>Low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ENSG00000000460</td>\n",
+       "      <td>C1orf112</td>\n",
+       "      <td>K-562</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>FPKM</td>\n",
+       "      <td>Low</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 0         1      2     3     4             5\n",
+       "0  ENSG00000000003    TSPAN6  K-562   0.0  FPKM  Not detected\n",
+       "1  ENSG00000000005      TNMD  K-562   0.0  FPKM  Not detected\n",
+       "2  ENSG00000000419      DPM1  K-562  78.7  FPKM          High\n",
+       "3  ENSG00000000457     SCYL3  K-562   5.4  FPKM           Low\n",
+       "4  ENSG00000000460  C1orf112  K-562  17.0  FPKM           Low"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_k562 = pd.read_csv(\"k562.csv\",header=None)\n",
+    "df_k562 = pd.read_csv(\"k562.csv\",header=None,sep=',')\n",
     "df_k562.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "df_k562.iloc[:,0].head()"
    ]
   },
   {
@@ -611,9 +680,41 @@
    "source": [
     "#Solution code here"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   `3. The value of pi can be calculated by comparing the area of circle inscribed in a square to the area of the square. We can do this numerically by generating random numbers. Consider the following diagram:`<br>\n",
+    "    <img src=\"IMG_20190208_071332424.jpg\">\n",
+    "<br>The area of the circle divided by the area of the square (m) = pi.(r\\*\\*2)/4.r\\*\\*2<br>\n",
+    "                                                              m  = pi/4<br>\n",
+    "                                                            4\\*m = pi<br>\n",
+    "We can choose random points that fall within the square to approximate the area of the square: random values of x between 0 and 2, and random values of y between 0 and 2.<br>\n",
+    "We can then ask if that random point falls within the circle to approximate area of circle: (x-1)\\*\\*2 + (y-1)\\*\\*2 <= 1<br>\n",
+    "\n",
+    "So here is the psuedocode:\n",
+    "1. Find 1000 random values for x and y between 0 and 2\n",
+    "2. Count if that (x,y) lies within the circle (let us call this \"area_of_c\")\n",
+    "3. Find pi: 4\\*area_of_c/1000\n",
+    "\n",
+    "Repeat the same for 10,000 random numbers and 100,000 random numbers.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#code here"
+   ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
