Removed solutions from Module 6

--- a/Module_6_PandasII.ipynb
+++ b/Module_6_PandasII.ipynb
@@ -23,6 +23,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#For everything we need today, we will need pandas so let's import it.\n",
+    "\n",
+    "import pandas as pd"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,9 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Defining the dataframe\n",
@@ -53,6 +64,7 @@
     "    'pvalue' : [6e-5, 2e-6, 0.55, 1.00, 0.15, 0.001]}\n",
     "    \n",
     "df = pd.DataFrame(data = d)\n",
+    "print(df.head())\n",
     "\n",
     "#Select rows whose expression in condition 1 is 100\n",
     "newdf = df.query('cond1exp == 100')\n",
@@ -63,9 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Select rows whose expression in condition 1 is at least 20\n",
@@ -77,9 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Select rows whose expression in condition 1 is at least 20 and the pvalue is less than 0.05\n",
@@ -104,9 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Defining the dataframe\n",
@@ -136,9 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -168,9 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#We now have data for GeneG\n",
@@ -200,9 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Defining the dataframe\n",
@@ -281,9 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Merge your two dataframes using the gene names as the key.\n",
@@ -319,9 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mergeddf = pd.merge(df, df2, how = 'left', on = 'Gene', suffixes = ['_mine', '_myfriends'])\n",
@@ -370,9 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Melt our gene expression df, keeping the data associated with each variable\n",
@@ -421,9 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
@@ -488,9 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = {'Gene': ['GeneA', 'GeneB', 'GeneC', 'GeneD', 'GeneE', 'GeneF'],\n",
@@ -520,9 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = {'Gene': ['GeneA', 'GeneB', 'GeneC', 'GeneD', 'GeneE', 'GeneF'],\n",
@@ -551,9 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -636,9 +622,7 @@
     "    'cond1exp' : [100, 50, 40, 20, 1, 1000],\n",
     "    'cond2exp' : [200, 12.5, 45, 20, 4, 800],\n",
     "    'log2FC' : [1, -2, 0.17, 0.00, 2.00, -0.32],\n",
-    "    'pvalue' : [6e-5, 2e-6, 0.55, 1.00, 0.15, 0.001]}\n",
-    "\n",
-    "df = pd.DataFrame(data = d)"
+    "    'pvalue' : [6e-5, 2e-6, 0.55, 1.00, 0.15, 0.001]}\n"
    ]
   },
   {
@@ -663,9 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from numpy import mean\n",
@@ -680,35 +662,12 @@
     "    'log2FC' : [1, -2, 0.17, 0.00, 2.00, -0.32],\n",
     "    'pvalue' : [6e-5, 2e-6, 0.55, 1.00, 0.15, 0.001]}\n",
     "\n",
-    "yourdata = pd.DataFrame(data = d)\n",
-    "\n",
     "#Your friend's data\n",
     "d2 = {'Gene': ['GeneA', 'GeneB', 'GeneC', 'GeneD', 'GeneE', 'GeneF'],\n",
     "    'cond1exp' : [120, 50, 30, 20, 2, 950],\n",
     "    'cond2exp' : [210, 25, 25, 30, 5, 600],\n",
     "    'log2FC' : [0.81, -1, 0.26, -0.58, 1.32, 0.66],\n",
-    "    'pvalue' : [2e-3, 1e-4, 0.43, 0.25, 0.31, 0.005]}\n",
-    "\n",
-    "friendsdata = pd.DataFrame(data = d2)\n",
-    "\n",
-    "\n",
-    "mylog2 = yourdata.loc[:, 'log2FC'].values\n",
-    "friendlog2 = friendsdata.loc[:, 'log2FC'].values\n",
-    "\n",
-    "realcorr = spearmanr(mylog2, friendlog2)[0]\n",
-    "\n",
-    "randomcors = []\n",
-    "for i in range(500):\n",
-    "    shuffle(mylog2) #shuffles in place\n",
-    "    shuffle(friendlog2) #shuffles in place\n",
-    "    randomcor = spearmanr(mylog2, friendlog2)[0]\n",
-    "    randomcors.append(randomcor)\n",
-    "    \n",
-    "randommean = mean(randomcors)\n",
-    "randomsd = std(randomcors)\n",
-    "\n",
-    "z = (realcorr - randommean) / randomsd\n",
-    "print(z)"
+    "    'pvalue' : [2e-3, 1e-4, 0.43, 0.25, 0.31, 0.005]}\n"
    ]
   },
   {
@@ -723,7 +682,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -737,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
