Updating Problem Statement

--- a/Module_5_Pandas_SciPy_NumPy.ipynb
+++ b/Module_5_Pandas_SciPy_NumPy.ipynb
@@ -931,13 +931,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Solution code here"
+    "#Solution code here\n",
+    "w=1\n",
+    "x=2 \n",
+    "y=3\n",
+    "z=10\n",
+    "\n",
+    "3*w + 4*x - 5*y + 3*z\n"
    ]
   },
   {
@@ -949,6 +966,7 @@
     " w  + 2x + 4y -  z =  7\n",
     "2w  - 2x -  y +  z =  5\n",
     " w  +  x - 3y + 2z = 14\n",
+    "3w  + 4x - 5y + 3z = 26\n",
     "`<br><br>\n",
     "The solution is w=1, x=2, y=3, z=10.<br>\n",
     "Here is a link where the math is explained: https://www.mathsisfun.com/algebra/systems-linear-equations-matrices.html"
