--- a/Module_7_STARRseq.ipynb
+++ b/Module_7_STARRseq.ipynb
@@ -337,12 +337,14 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "peak_score_w_ecd = {}\n",
+    "\n",
     "fh = open(\"py_peaks_w_ecd.bed\",\"w\")\n",
     "ave_vals = {}\n",
     "location = []\n",
     "for p in peaks_ecd:\n",
     "    peak_pos = pos_list[p]\n",
-    "    temp_str = \"chr3L\\t\" + str(peak_pos-250) + \"\\t\" + str(peak_pos+250) + \"\\n\"\n",
+    "    temp_str = \"chr3L\\t\" + str(peak_pos-250) + \"\\t\" + str(peak_pos+250) + \"\\t\" + str(p) + \"\\n\"\n",
     "    fh.write(temp_str)\n",
     "    for i in range(peak_pos-2000,peak_pos+2000):\n",
     "        if i in w_ecd['3L']:\n",
@@ -351,6 +353,12 @@
     "                ave_vals['val'][i-peak_pos] += w_ecd['3L'][i]\n",
     "            else:\n",
     "                ave_vals['val'][i-peak_pos] = w_ecd['3L'][i]\n",
+    "    score=0\n",
+    "    key=\"chr3L:\" + str(peak_pos-250) + \"-\" + str(peak_pos+250)\n",
+    "    for i in range(peak_pos-100,peak_pos+100):\n",
+    "        if i in w_ecd['3L']:\n",
+    "            score+=w_ecd['3L'][i]\n",
+    "        peak_score_w_ecd[key] = score/20\n",
     "\n",
     "fh.close()\n",
     "df_ave_vals = pd.DataFrame(ave_vals)\n",
@@ -372,7 +380,7 @@
     "location_wo = []\n",
     "for p in peaks_wo_ecd:\n",
     "    peak_pos = pos_list_wo[p]\n",
-    "    temp_str = \"chr3L\\t\" + str(peak_pos-250) + \"\\t\" + str(peak_pos+250) + \"\\n\"\n",
+    "    temp_str = \"chr3L\\t\" + str(peak_pos-250) + \"\\t\" + str(peak_pos+250) + \"\\t\" + str(p) + \"\\n\"\n",
     "    fh.write(temp_str)\n",
     "    for i in range(peak_pos-2000,peak_pos+2000):\n",
     "        if i in wo_ecd['3L']:\n",
@@ -419,31 +427,12 @@
     "\n",
     "#g.seqfn\n",
     "\n",
-    "fo = open('py_peaks.fa', 'w')\n",
+    "fo = open('w_ecd_peaks.fa', 'w')\n",
     "fo.write(open(g.seqfn).read())\n",
     "\n",
     "g = enhancers_wo_ecd.sequence(fi='3L.fa')\n",
     "\n",
     "fo = open('wo_ecd_peaks.fa', 'w')\n",
-    "fo.write(open(g.seqfn).read())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#Negative control - random intervals\n",
-    "\n",
-    "x = pybedtools.BedTool()\n",
-    "y = x.random(l=500, n=243, g='dm6.sizes')\n",
-    "\n",
-    "g = y.sequence(fi='3L.fa')\n",
-    "\n",
-    "fo = open('negative_control.fa', 'w')\n",
     "fo.write(open(g.seqfn).read())"
    ]
   },
@@ -503,7 +492,51 @@
     "\n",
     "#Now add these values as a new column\n",
     "newdf = mergeddf.assign(Enrichment = Enrichment)\n",
-    "print(newdf.sort_values(by='Enrichment',ascending=False).head())"
+    "print(newdf.sort_values(by='Enrichment',ascending=False).head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "peak_score_w_ecd[w_ecd_motifs.iloc[0]['sequence_name']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with_score = pd.DataFrame()\n",
+    "for i in newdf.sort_values(by='Enrichment',ascending=False).head(5).index.values:\n",
+    "    new_df = w_ecd_motifs.query(\"motif_alt_id == '{0}'\".format(i)).iloc[:,1:3]\n",
+    "    #print(new_df.head(1))\n",
+    "    score_col = []\n",
+    "    for index, row in new_df.iterrows():\n",
+    "        score_col.append(peak_score_w_ecd[row['sequence_name']])\n",
+    "    new_df = new_df.assign(score_col = score_col)\n",
+    "    with_score = with_score.append(new_df)\n",
+    "with_score.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "sns.boxplot(data = with_score, x = 'motif_alt_id', y = 'score_col')\n",
+    "plt.show()"
    ]
   }
  ],
