--- a/Final_Projects.ipynb
+++ b/Final_Projects.ipynb
@@ -4,7 +4,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Project 1\n",
+    "\n",
+    "In the STARR-seq analysis we performed Module 7, we ended by plotting boxplots for STARR-seq scores of each motif that was enriched in enhancers activated by ecdysone compared to constitutive enhancers. Write code to compare those scores against STARR-seq scores for the same motifs found in enhancers in the absence of ecdysone. This would be the output:\n",
+    "<img src='boxplot_compare.png'>\n",
+    "\n",
+    "The suffix \"_wo\" means those boxplots correspond to enhancers with the corresponding motifs found in the STARR-seq dataset without ecdysone treatment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#PUT YOUR CODE FOR PROJECT 1 HERE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Project 2\n",
+    "\n",
+    "For the ecdysone responsive enhancers, we want to find out if adjacent genes change during ecdysone treatment. Gene expression changes upon addition of ecdysone is in the file \"rpkm_ecdysone_to_ctl.txt\", which has two columns separated by a tab. First column is Gene_name, second column named \"Enrichment\" is the log2 fold change of expression upon addition of ecdysone. The genes next to enhancers responsive to ecdysone are listed in \"w_ecd_genes.list\" and the control group is listed in \"wo_ecd_genes.list\". Make a boxplot of expression change comparing genes next to ecdysone enhancers and genes next to control enhancers. Your result should look like this:\n",
+    "\n",
+    "<img src='gene_exp_boxplot.png'>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#PUT YOUR CODE FOR PROJECT 2 HERE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Project 3\n",
     "\n",
     "RBFOX2 is a human splicing factor.  It regulates the inclusion of exons through binding to specific RNA sites near alternative exons.  Below is a \"splicing map\" from Jangi et al (2014) for RBFOX2.  It combines RBP/RNA interaction data (CLIP-seq) with data about which exons are more/less included upon RBFOX2 knockdown."
    ]
@@ -58,14 +103,14 @@
    },
    "outputs": [],
    "source": [
-    "#PUT YOUR CODE FOR PROJECT 2 HERE"
+    "#PUT YOUR CODE FOR PROJECT 3 HERE"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project 3\n",
+    "## Project 4\n",
     "\n",
     "RNA molecules, being single stranded, have the ability to fold onto themselves into elaborate secondary structures by forming basepairs between nucleotides. These structures are often important for the biological function of the RNA.  Several modern algorithms exist for predicting RNA secondary structures from a given primary sequence.  One of these is called RNAfold.  When RNAfold is given the sequence of a noncoding RNA called 7SK (sequence below, make sure you scroll right),\n",
     "\n",
@@ -115,14 +160,14 @@
    },
    "outputs": [],
    "source": [
-    "# PUT YOUR CODE FOR PROJECT 3 HERE"
+    "# PUT YOUR CODE FOR PROJECT 4 HERE"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
