fisher_exact hint

--- a/Final_Projects.ipynb
+++ b/Final_Projects.ipynb
@@ -83,14 +83,33 @@
     "\n",
     "What we would like to do is write code that compares the sequence content of the two files and identifies 5-mers that are enriched in the \"Enhanced\" file relative to the \"control\" file.  This can be done with the following approach:\n",
     "\n",
-    "1.  Go through each file and count the number of occurences of each 5-mer.  This might be best stored as a dictionary of the form {kmer : number of occurences}.\n",
-    "2.  Calculate a log2 enrichment for each for each kmer in the affected relative to control by dividing the frequency of the kmer in the affected sequences to its frequency in control sequences and taking the log base 2 of the ratio.  Remember that the frequency of a kmer is that number of occurences of that kmer divided by the number of occurences of all kmers.  Frequencies must be between 0 and 1.  Enrichments will be positive if the kmer is enriched in the enhanced sequences and negative if enriched in the control sequences.\n",
-    "3.  Calculate the statistical significance of that enrichment with a Fisher's exact test.  This can be done by importing the fisher_exact function from the scipy.stats module.  See the [documentation](http://lagrange.univ-lyon1.fr/docs/scipy/0.17.1/generated/scipy.stats.fisher_exact.html) for fisher_exact for help.\n",
-    "4.  Correct your Fisher's exact p-values for multiple hypothesis testing with a Bonferroni correction.  Very simply, multiply your original pvalue from fisher_exact by the number of kmers you are considering (there are 4096 possible 6mers).\n",
-    "5. Sort kmers by their corrected pvalues.\n",
-    "6. Write a file with the following columns for every kmer:\n",
+    "1\\.  Go through each file and count the number of occurences of each 5-mer.  This might be best stored as a dictionary of the form {kmer : number of occurences}.\n",
+    "\n",
+    "2\\.  Calculate a log2 enrichment for each for each kmer in the affected relative to control by dividing the frequency of the kmer in the affected sequences to its frequency in control sequences and taking the log base 2 of the ratio.  Remember that the frequency of a kmer is that number of occurences of that kmer divided by the number of occurences of all kmers.  Frequencies must be between 0 and 1.  Enrichments will be positive if the kmer is enriched in the enhanced sequences and negative if enriched in the control sequences.\n",
+    "\n",
+    "3\\.  Calculate the statistical significance of that enrichment with a Fisher's exact test.  This can be done by importing the fisher_exact function from the scipy.stats module.  See the [documentation](http://lagrange.univ-lyon1.fr/docs/scipy/0.17.1/generated/scipy.stats.fisher_exact.html) for fisher_exact for help.\n",
+    "\n",
+    " As you can see from it's documentation, for each kmer, fisher_exact is expecting a 2x2 contingency table of kmer counts.  For your data, this is of the form:\n",
+    "\n",
+    "|         |controlseqs|enhancedseqs|\n",
+    "|---------|-----------|------------|\n",
+    "|counts of this kmer| a | b|\n",
+    "|combined counts of all other kmers|c|d|\n",
+    "\n",
+    " fisher_exact is expecting to be given this table in the form of the nested list \n",
+    " > [[a, b], [c, d]]\n",
+    "\n",
+    " It will return two values.  You only want one of the two.  Make sure you choose the right one.\n",
+    "\n",
+    "\n",
+    "4\\. Correct your Fisher's exact p-values for multiple hypothesis testing with a Bonferroni correction.  Very simply, multiply your original pvalue from fisher_exact by the number of kmers you are considering (there are 1024 possible 5mers).\n",
+    "\n",
+    "5\\. Sort kmers by their corrected pvalues.\n",
+    "\n",
+    "6\\. Write a file with the following columns for every kmer:\n",
     "      kmer, frequency_in_enhanced, frequency_in_ctrl, enrichment (log2), uncorrected pvalue, corrected pvalue\n",
-    "7. Print the first 10 lines (the top 10 kmers sorted by pvalue) in your code block.      \n",
+    "      \n",
+    "7\\. Print the first 10 lines (the top 10 kmers sorted by pvalue) in your code block.      \n",
     "\n",
     "Perhaps the best way to tackle this would be to write an independent function for each one of the numbered tasks above.  This keeps your code neat and readable."
    ]
