--- a/Final_Projects.ipynb
+++ b/Final_Projects.ipynb
@@ -102,7 +102,7 @@
     " It will return two values.  You only want one of the two.  Make sure you choose the right one.\n",
     "\n",
     "\n",
-    "4\\. Correct your Fisher's exact p-values for multiple hypothesis testing with a Bonferroni correction.  Very simply, multiply your original pvalue from fisher_exact by the number of kmers you are considering (there are 1024 possible 5mers).\n",
+    "4\\. Correct your Fisher's exact p-values for multiple hypothesis testing with a Bonferroni correction.  Very simply, divide your original pvalue from fisher_exact by the number of kmers you are considering (there are 1024 possible 5mers).\n",
     "\n",
     "5\\. Sort kmers by their corrected pvalues.\n",
     "\n",
